# OpenGLTemplate

./: CMakeLists.txt  README.md  main.cpp
include/: Window.hpp
